--- a/src/sample/DemoTest/input.fxml
+++ b/src/sample/DemoTest/input.fxml
@@ -12,6 +12,6 @@
       <Label layoutX="14.0" layoutY="5.0" prefHeight="32.0" prefWidth="167.0" text="请输入要排序的数(逗号分隔)：" />
       <RadioButton fx:id="updown" layoutX="181.0" layoutY="141.0" mnemonicParsing="false" text="降序" />
       <Button fx:id="startbut" layoutX="243.0" layoutY="137.0" mnemonicParsing="false" onMouseClicked="#startsort" text="开始排序" />
-      <Button fx:id="randomnum" onMouseClicked="#getrandnum" layoutX="362.0" layoutY="10.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="100.0" text="随机生成" />
+      <Button fx:id="randomnum" onMouseClicked="#getrnum" layoutX="362.0" layoutY="10.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="100.0" text="随机生成" />
    </children>
 </AnchorPane>
