添加排序算法比较

--- a/src/sample/JavaFXUI/mainUI.fxml
+++ b/src/sample/JavaFXUI/mainUI.fxml
@@ -85,6 +85,7 @@
                    <String fx:value="基数排序" />
                    <String fx:value="堆排序" />
                    <String fx:value="归并排序" />
+                   <String fx:value="排序比较" />
                </FXCollections>
            </items>
        </ChoiceBox>
