--- a/src/sample/HeapSort/heapsort.fxml
+++ b/src/sample/HeapSort/heapsort.fxml
@@ -6,12 +6,11 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane prefHeight="225.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.HeapSort.inputNode">
+<AnchorPane prefHeight="186.0" prefWidth="523.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.HeapSort.inputNode">
    <children>
-      <Label layoutX="22.0" layoutY="30.0" text="请输入深度为4的满二叉树：" />
-      <TextField fx:id="tf" layoutX="22.0" layoutY="77.0" prefHeight="82.0" prefWidth="561.0" />
-      <Button fx:id="random" onMouseClicked="#clickrand" layoutX="500.0" layoutY="24.0" mnemonicParsing="false" text="随机" />
-      <Button fx:id="confirm" onMouseClicked="#clickok" layoutX="261.0" layoutY="175.0" mnemonicParsing="false" text="确定" />
+      <Label layoutX="20.0" layoutY="18.0" text="请输入深度为4的满二叉树：" />
+      <TextField fx:id="tf" layoutX="20.0" layoutY="60.0" prefHeight="56.0" prefWidth="482.0" />
+      <Button fx:id="random" layoutX="442.0" layoutY="12.0" mnemonicParsing="false" onMouseClicked="#clickrand" text="随机" />
+      <Button fx:id="confirm" layoutX="231.0" layoutY="136.0" mnemonicParsing="false" onMouseClicked="#clickok" text="确定" />
    </children>
 </AnchorPane>
