--- a/src/sample/inputTree/inputbtree.fxml
+++ b/src/sample/inputTree/inputbtree.fxml
@@ -11,8 +11,7 @@
     <children>
       <Button fx:id="vieweg" layoutX="14.0" layoutY="8.0" mnemonicParsing="false" onMouseClicked="#viewclick" prefHeight="29.0" prefWidth="128.0" text="显示输入数据样例：" />
       <TextField fx:id="tf" layoutX="146.0" layoutY="8.0" prefHeight="29.0" prefWidth="367.0" />
-        <TextArea fx:id="btreeta" layoutX="14.0" layoutY="49.0" onMouseClicked="#btreetaclick" prefHeight="73.0" prefWidth="501.0" promptText="在此输入数据..." />
-        <Button fx:id="btreeb" layoutX="176.0" layoutY="134.0" mnemonicParsing="false" onMouseClicked="#btreeclick" text="静态可视化" />
-      <Button fx:id="dynview" layoutX="271.0" layoutY="134.0" mnemonicParsing="false" onMouseClicked="#dynclick" prefHeight="23.0" prefWidth="76.0" text="动态可视化" />
+        <TextArea fx:id="btreeta" layoutX="14.0" layoutY="49.0" prefHeight="73.0" prefWidth="501.0" promptText="在此输入数据..." />
+        <Button fx:id="btreeb" layoutX="225.0" layoutY="139.0" mnemonicParsing="false" onMouseClicked="#btreeclick" text="确定" />
     </children>
 </AnchorPane>
