--- a/src/sample/HeapSort/heapsort.fxml
+++ b/src/sample/HeapSort/heapsort.fxml
@@ -12,11 +12,11 @@
       <TextField fx:id="tf" layoutX="20.0" layoutY="60.0" prefHeight="56.0" prefWidth="482.0" />
       <Button fx:id="random" layoutX="442.0" layoutY="12.0" mnemonicParsing="false" onMouseClicked="#clickrand" text="随机" />
       <Button fx:id="confirm" layoutX="323.0" layoutY="136.0" mnemonicParsing="false" onMouseClicked="#clickok" text="确定" />
-      <RadioButton layoutX="91.0" layoutY="142.0" mnemonicParsing="false" selected="true" text="大顶堆">
+      <RadioButton layoutX="91.0" layoutY="142.0" mnemonicParsing="false" onMouseClicked="#big" text="大顶堆">
          <toggleGroup>
             <ToggleGroup fx:id="heap" />
          </toggleGroup>
       </RadioButton>
-      <RadioButton layoutX="198.0" layoutY="142.0" mnemonicParsing="false" text="小顶堆" toggleGroup="$heap" />
+      <RadioButton layoutX="198.0" layoutY="142.0" mnemonicParsing="false" onMouseClicked="#small" selected="true" text="小顶堆" toggleGroup="$heap" />
    </children>
 </AnchorPane>
